fixing day overflow in month view

--- a/client/development/month/month.scss
+++ b/client/development/month/month.scss
@@ -15,6 +15,7 @@
 
 			color: initial;
 			text-decoration: initial;
+			overflow: hidden;
 
 			&:hover {
 				.heading {
